Update createUser handler, models.User, InsertUserInDatabase and create GetMatches handler
