# handlers/usersHandlers.go
@@ -3,17 +3,14 @@ package handlers
 import (
 	"GDS-Connect/models"
 	"GDS-Connect/utils"
-	"cloud.google.com/go/firestore"
-	"context"
-	"github.com/gin-gonic/gin"
-	"log"
 	"net/http"
+	"strconv"
+	"github.com/gin-gonic/gin"
 )
 
 // curl {{base_url}}:{{server_port}}/api/users
 
-// GetUsers
-// PingExample godoc
+// GetUsers godoc
 // @Summary Retrieves all users from the database
 // @Schemes
 // @Description Retrieves all users from the database
@@ -23,38 +20,53 @@ import (
 // @Router /users [get]
 func GetUsers(ctx *gin.Context) {
 
-	client, dbContext := GetDatabase(ctx)
+	client, dbContext := utils.GetDatabase(ctx)
 
 	users := utils.GetUsersFromDatabase(client, dbContext)
 
 	ctx.IndentedJSON(http.StatusOK, users)
 }
 
-// GetDatabase Returns the client and the context of the database
-func GetDatabase(ctx *gin.Context) (*firestore.Client, context.Context) {
-	// Retrieves the client and dbContext from the gin context
-	client, _ := ctx.MustGet("db").(*firestore.Client)
-	dbContext, _ := ctx.MustGet("dbContext").(context.Context)
-	return client, dbContext
-}
-
-// GetUserById Returns the user with the given <id> from the database
+// GetUserById godoc
+// @Summary Get a user by ID
+// @Description Returns the user with the given ID from the database
+// @Tags Users
+// @Produce  json
+// @Param id path int true "User ID"
+// @Success 200 {object} models.User "User data"
+// @Failure 400 {object} string "Error: Invalid user ID"
+// @Failure 404 {object} string "Error: Couldn't find the requested user"
+// @Router /users/{id} [get]
 func GetUserById(ctx *gin.Context) {
-	id := ctx.Param("id")
+    id := ctx.Param("id")
 
-	client, dbContext := GetDatabase(ctx)
+    client, dbContext := utils.GetDatabase(ctx)
 
-	user, err := client.Collection("users").Doc(id).Get(dbContext)
-	if err != nil {
-		log.Println(err)
-		ctx.IndentedJSON(http.StatusNotFound, gin.H{"error": "Couldn't find the requested user."})
-		return
-	}
+    user, err := utils.GetUserById(client, dbContext, id)
+    if err != nil {
+        if err == strconv.ErrSyntax {
+            ctx.IndentedJSON(http.StatusBadRequest, gin.H{"error": "Invalid ID format"})
+        } else {
+            ctx.IndentedJSON(http.StatusNotFound, gin.H{"error": "Couldn't find the requested user."})
+        }
+        return
+    }
 
-	ctx.IndentedJSON(http.StatusOK, user.Data())
+    ctx.IndentedJSON(http.StatusOK, user)
 }
 
-// CreateUser Adds a user from the body of the request to the database
+
+// CreateUser godoc
+// @Summary Creates a new user
+// @Schemes
+// @Description Adds a user from the body of the request to the database
+// @Tags Users
+// @Accept json
+// @Produce json
+// @Param user body models.User required "User info"
+// @Success 201 {object} string "User created"
+// @Failure 400 {object} string "Error: Incorrect POST request: Couldn't parse the body."
+// @Router /users [post]
 func CreateUser(ctx *gin.Context) {
 	var newUser models.User
 
@@ -65,7 +77,39 @@ func CreateUser(ctx *gin.Context) {
 	}
 
 	// Adds the new userTmp to the slice
-	client, dbContext := GetDatabase(ctx)
+	client, dbContext := utils.GetDatabase(ctx)
 	utils.InsertUserInDatabase(nil, client, dbContext, newUser)
 	ctx.IndentedJSON(http.StatusCreated, newUser)
 }
+
+// GetMatches godoc
+// @Summary Match users by shared interests
+// @Description Finds users with matching interests based on the given user ID
+// @Tags Users
+// @Accept  json
+// @Produce  json
+// @Param id path int true "User ID"
+// @Success 200 {array} models.User "List of users with matching interests"
+// @Failure 400 {object} string "Error: Invalid user ID"
+// @Failure 404 {object} string "Error: User not found"
+// @Failure 500 {object} string "Error: Internal server error"
+// @Router /users/{id}/match [get]
+func GetMatches(ctx *gin.Context) {
+    id := ctx.Param("id")
+
+    client, dbContext := utils.GetDatabase(ctx)
+
+    // Utilize the FindMatchingUsers utility function
+    matchedUsers, err := utils.FindMatchingUsers(client, dbContext, id)
+    if err != nil {
+        if err == strconv.ErrSyntax {
+            ctx.IndentedJSON(http.StatusBadRequest, gin.H{"error": "Invalid user ID format"})
+        } else {
+            ctx.IndentedJSON(http.StatusInternalServerError, gin.H{"error": "Error finding matches"})
+        }
+        return
+    }
+
+    ctx.IndentedJSON(http.StatusOK, matchedUsers)
+}
+
